--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "49585525-a10c-4d8b-8c34-b3c09027afa9"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
